# tts-tokens-that-suffice

./: .gitignore  .gitmodules  README.md  pyproject.toml
scripts/: serve_and_collect.sh
scripts/tests/: serve.sh
scripts/tests/config/: rl.json
server/: README.md
server/config/: rl.json  sft.json
server/scripts/: build.sh  run.sh  tts-server.def
src/tts/: collect_trajectories.py  train_rl.py  train_sft.py
src/tts/agent/: summarization_agent.py  tracking.py
src/tts/data/: agent_trajectory.py
src/tts/recipes/agent_summarization/: data.py  recipe.py  rl_recipe.py  sft_recipe.py
src/tts/reward/: reverse_kl_reward.py  utils.py
src/tts/summarization/: utils.py
src/tts/tinker/: api.py
src/tts/utils/: logprob.py  mini_swe.py  mini_swe_OLD.py  patch.py  summary_utils.py  timeout.py  trajectory.py
tests/: train_agent_summarization.py  train_agent_summarization_rl.py  train_sl_loop.py
tests/feature/: example.json  test_distortion_reward.py
tests/fixtures/: fake_summary.txt  sample_trajectories.jsonl  summary.txt
