[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-tokens-that-suffice"
version = "0.1.0"
requires-python = ">=3.11, <3.14"
dependencies = []  # tinker-cookbook installed from submodule by setup.sh

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
environments = ["sys_platform == 'linux'"]
override-dependencies = [
    "tinker==0.22.2",  # newer tinker adds vllm-router which requires glibc 2.35 (system has 2.34)
]
