[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-tokens-that-suffice"
version = "0.1.0"
requires-python = ">=3.11, <3.14"
dependencies = [
    "vllm==0.19.0",
    "tinker-cookbook>=0.4.2",
    "litellm>=1.89.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
concurrent-downloads = 10
concurrent-builds = 4
concurrent-installs = 4
